--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 	<head>
 		<title>MY PORTFOLIO</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-        
+        <nav class="topnav">
+            <ul>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="pages/Blog.html">Blog</a></li>
+                <li><a href="pages/cv.html">CV</a></li>
+                <li><a href="pages/research.html">Research</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
+        </nav>
 	</body>
 </html>
