--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<body>
         <nav class="topnav">
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="pages/Blog.html">Blog</a></li>
-                <li><a href="pages/cv.html">CV</a></li>
-                <li><a href="pages/research.html">Research</a></li>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="pages/blog.html">Blog</a></li>
+                <li><a href="pages/sitereport.html">CV</a></li>
+                <li><a href="pages/portfolio.html">Research</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
