css adding copyright

--- a/index.html
+++ b/index.html
@@ -2,17 +2,44 @@
 <html>
 	<head>
 		<title>MY PORTFOLIO</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/mobile.css" media="screen and (min-width: 300px) and (max-width: 800px)" />
 	</head>
 	<body>
         <nav class="topnav">
             <ul>
-                <li><a class="active" href="home.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="pages/portfolio.html">Portrfolio</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
-                <li><a href="pages/sitereport.html">CV</a></li>
-                <li><a href="pages/portfolio.html">Research</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="pages/sitereport.html">Site Report</a></li>
+                <li><a href="pages/contact.html">Contact Me</a></li>
+                <a href="index.html"><img class="logo" width="70px" height="70px" src="image/logobk.png"></a>
             </ul>
         </nav>
+        <section class="para1">
+			<h1>CSY1018 - Web Development</h1>
+			<h2>Lecturer: Tom Butler</h2>
+			<p>This purpose of this (Level 4) module is to give students an understanding of client side web technologies. This module provides students with: the essential knowledge and practical skills to design develop and implement a Web site to contenporary web standard; an overview of the Internet technologies the overall software architecture of the Internet including servers clients browsers is covered leading to the use of a Web server to install maintain and publish Web Pages to achieve Web presence; standard client side dynamic web development environment such as HTML Cascading Style Sheets (CSS) and JavaScript are covered in detail. </p>
+
+		</section>
+		<section class="para2">
+			<h1>CSY1019 - Software Engineering 1</h1>
+			<h2>Lecturer: Mark Johnson</h2>
+			<p>The module will introduce students to the Software Engineering lifecycle. Focusing on: investigating a problem domain eliciting software requirements preparing a requirement specification document performing system design and presenting them to clients; introduce students to the skills principles and concepts necessary to implement solutions; use of a high level programming language to implement algorithms; a late-objects approach will be adopted to teach programming.  </p>
+		</section>
 	</body>
+    <footer>
+            <section class="footnav"> 
+                   <ul>
+                    <a href="index.html"><img class="logo" width="120px" height="120px" src="image/logobk.png"></a>
+					<li><a href="#">Contact Form</a></li>
+					<li><a href="#">Terms of Use</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Cookie Policy</a></li>
+				    </ul>
+            </section>
+            <section class="copyright">
+                &copy; copyright HSETIR 2022
+            </section>
+    </footer>
 </html>
