--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MY PORTFOLIO</title>
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/mobile.css" media="screen and (min-width: 300px) and (max-width: 800px)" />
-	</head>
+        <title>MY PORTFOLIO WEBSITE</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 800px)" />
+        <link rel="stylesheet" href="css/main.css" media="screen and (min-width: 800px)" />
+
+    </head>
 	<body>
         <nav class="topnav">
             <ul>
@@ -14,6 +16,7 @@
                 <li><a href="pages/sitereport.html">Site Report</a></li>
                 <li><a href="pages/contact.html">Contact Me</a></li>
                 <a href="index.html"><img class="logo" width="70px" height="70px" src="image/logobk.png"></a>
+                
             </ul>
         </nav>
         <section class="para1">
@@ -27,9 +30,14 @@
 			<h2>Lecturer: Mark Johnson</h2>
 			<p>The module will introduce students to the Software Engineering lifecycle. Focusing on: investigating a problem domain eliciting software requirements preparing a requirement specification document performing system design and presenting them to clients; introduce students to the skills principles and concepts necessary to implement solutions; use of a high level programming language to implement algorithms; a late-objects approach will be adopted to teach programming.  </p>
 		</section>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+
+        </p>
 	</body>
     <footer>
-            <section class="footnav"> 
+            <div class="footnav"> 
                    <ul>
                     <a href="index.html"><img class="logo" width="120px" height="120px" src="image/logobk.png"></a>
 					<li><a href="#">Contact Form</a></li>
@@ -37,9 +45,9 @@
 					<li><a href="#">Privacy Policy</a></li>
 					<li><a href="#">Cookie Policy</a></li>
 				    </ul>
-            </section>
-            <section class="copyright">
+                </div>
+            <div class="copyright">
                 &copy; copyright HSETIR 2022
-            </section>
+            </div>
     </footer>
 </html>
