--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 	<head>
         <title>MY PORTFOLIO WEBSITE</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 800px)" />
-        <link rel="stylesheet" href="css/main.css" media="screen and (min-width: 800px)" />
+        <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 801px)" />
+        <link rel="stylesheet" href="css/main.css" media="screen and (min-width: 801px)" />
 
     </head>
 	<body>
         <nav class="topnav">
+            <div class="logo1">
+                <a href="index.html"><img src="image/logobk.png" alt="log0"></a>
+            </div>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="pages/portfolio.html">Portrfolio</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
                 <li><a href="pages/sitereport.html">Site Report</a></li>
                 <li><a href="pages/contact.html">Contact Me</a></li>
-                <a href="index.html"><img class="logo" width="70px" height="70px" src="image/logobk.png"></a>
                 
             </ul>
+            <div class="hamburger">
+                <div class="bun1"></div>
+                <div class="bun2"></div>
+                <div class="bun3"></div>
+            </div>
         </nav>
         <section class="para1">
 			<h1>CSY1018 - Web Development</h1>
@@ -35,19 +42,19 @@
 
 
         </p>
-	</body>
-    <footer>
-            <div class="footnav"> 
+    <footer class="footnav">
+            <div class="logo2">
+                <a href="index.html"><img src="image/logobk.png" alt="log0"></a>>
+            </div>  
                    <ul>
-                    <a href="index.html"><img class="logo" width="120px" height="120px" src="image/logobk.png"></a>
 					<li><a href="#">Contact Form</a></li>
 					<li><a href="#">Terms of Use</a></li>
 					<li><a href="#">Privacy Policy</a></li>
 					<li><a href="#">Cookie Policy</a></li>
 				    </ul>
-                </div>
             <div class="copyright">
                 &copy; copyright HSETIR 2022
             </div>
     </footer>
+</body>
 </html>
