adding social media footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     <footer class="footnav">
             <div class="logo2">
                 <a href="index.html"><img src="image/logobk.png" alt="log0"></a>>
+            </div>
+            <div class="social">
+                <a href="index.html"><img src="image/fb.png" alt="fb"></a>>
+                <a href="index.html"><img src="image/insta.png" alt="instagram"></a>>
+                <a href="index.html"><img src="image/tweeter.png" alt="tweeter"></a>>
+                <a href="index.html"><img src="image/email.png" alt="email"></a>>
             </div>  
                    <ul>
 					<li><a href="#">Contact Form</a></li>
