social icon animation and quick links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         </p>
-    <footer class="footnav">
+    <footer>
             <div class="logo2">
                 <a href="index.html"><img src="image/logobk.png" alt="log0"></a>>
             </div>
@@ -52,12 +52,13 @@
                 <a href="index.html"><img src="image/tweeter.png" alt="tweeter"></a>>
                 <a href="index.html"><img src="image/email.png" alt="email"></a>>
             </div>  
-                   <ul>
-					<li><a href="#">Contact Form</a></li>
-					<li><a href="#">Terms of Use</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="#">Cookie Policy</a></li>
-				    </ul>
+                  <div class="footnav"> <ul>
+                      <h2>Quick Links</h2>
+					<li><a href="/pages/contact.html">Contact Me</a></li>
+					<li><a href="/pages/portfolio.html">Portfolio</a></li>
+					<li><a href="/pages/sitereport.html">Sitereport</a></li>
+					<li><a href="/pages/blog.html">Blog</a></li>
+				    </ul></div>
             <div class="copyright">
                 &copy; copyright HSETIR 2022
             </div>
