--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <a href="index.html"><img src="image/logobk.png" alt="log0"></a>>
             </div>
             <div class="social">
-                <a href="index.html"><img src="image/fb.png" alt="fb"></a>>
-                <a href="index.html"><img src="image/insta.png" alt="instagram"></a>>
-                <a href="index.html"><img src="image/tweeter.png" alt="tweeter"></a>>
-                <a href="index.html"><img src="image/email.png" alt="email"></a>>
+                <a href="https://www.facebook.com/" target="_blank"><img src="image/fb.png" alt="fb"></a>>
+                <a href="https://www.instagram.com/" target="_blank"><img src="image/insta.png" alt="instagram"></a>>
+                <a href="https://twitter.com/" target="_blank"><img src="image/tweeter.png" alt="tweeter"></a>>
+                <a href="mailto:riteshjungshah6533@gmail.com" target="_blank"><img src="image/email.png" alt="email"></a>>
             </div><br>
             <h2>Quick Links</h2> 
             <div class="footnav"> 
