intro part of index page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
                 </ul>
               </nav>
         <div class="container1">
-            
+            <section class="intro">
+                <div class="main">
+                    <img src="image/face.png" alt="face">
+                    <div class="about-text">
+                        <h2>HELLO,<br>WELCOME TO MY WEBSITE!!</h2>
+                <h3>- Ritesh Jung Shah</h3>
+                <h4>I'am a Web Developer and a student .</h4>
+                    </div>
+                </div>
+            </section>
+        
     </div>
     <footer class="footernavbar">
             <div class="logo2">
