--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,7 +39,17 @@
                 </ul>
               </nav>
         <div class="container1">
-            
+            <div class="content">
+                <h4>Hello, my name is</h4>
+                <h1>Ritesh <span>Jung Shah</span></h1>
+                <h3>I'am a Web Developer and a student..</h3>
+                <div class="newslatter">
+                    <form>
+                        <input type="email" name="email" id="mail" placeholder="Enter Your Email">
+                        <input type="submit" name="submit" value="Lets Start">
+                    </form>
+                </div>
+            </div> 
     </div>
     <footer class="footernavbar">
             <div class="logo2">
