--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                     </div>
                 </div>
             </section>
+            <section class="links"> 
+                    <button><a href="pages/contact.html">Contact</a></button>
+                    <button><a href="pages/portfolio.html">Portfolio</a></button>
+                    <button><a href="pages/sitereport.html">Site Report</a></button>
+                    <button><a href="pages/blog.html">Blog</a></button>
+
+            </section>
         
     </div>
     <footer class="footernavbar">
