--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
                 </ul>
               </nav>
         <div class="container1">
-            <section class="intro">
+            <div class="intro">
                 <div class="main">
                     <img src="image/face.png" alt="face">
-                    <div class="about-text">
+                    <div class="intro-text">
                         <h2>HELLO,<br>WELCOME TO MY WEBSITE!!</h2>
                 <h3>- Ritesh Jung Shah</h3>
-                <h4>I'am a Web Developer and a student .</h4>
+                <h4>I'am a Web Developer and a student and this is my portfolio Website .</h4>
                     </div>
                 </div>
-            </section>
-            <section class="links"> 
+            </div>
+            <div class="links"> 
                     <button><a href="pages/contact.html">Contact</a></button>
                     <button><a href="pages/portfolio.html">Portfolio</a></button>
                     <button><a href="pages/sitereport.html">Site Report</a></button>
                     <button><a href="pages/blog.html">Blog</a></button>
 
-            </section>
+            </div>
         
     </div>
     <footer class="footernavbar">
