--- a/pages/sitereport.html
+++ b/pages/sitereport.html
@@ -39,6 +39,22 @@
                 </ul>
               </nav>
         <div class="container1">
+            <h2>SITE REPORT</h2>
+            <section class="layout1">
+                <h2>JOURNEY TO MAKE THIS WEBSITE FROM SCRATCH</h2>
+                <div class="box1">1
+                    heyyy
+
+                </div>
+                <div class="box1">2
+                    thisss is a 
+
+                </div>
+                <div class="box1">3
+                    boxx
+
+                </div>
+              </section>
             
     </div>
     <footer class="footernavbar">
