--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <nav class="dropdown">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle"> 
-                <section class="burger">
+                <div class="burger">
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
-                </section></label>
+                </div></label>
                 <ul class="menu">   
                     <li><a  href="index.html">Home</a></li>
                     <li><a href="pages/portfolio.html">Portrfolio</a></li>
@@ -50,9 +50,9 @@
                 </div>
             </div>
             <div class="links"> 
-                    <button><a href="pages/contact.html">Contact</a></button>
-                    <button><a href="pages/portfolio.html">Portfolio</a></button>
-                    <button><a href="pages/sitereport.html">Site Report</a></button>
+                    <a href="pages/contact.html"><button>Contact</button></a>
+                    <a href="pages/portfolio.html"><button>Portfolio</a></button>
+                    <a href="pages/sitereport.html"><button>Site Report</a></button>
                     <button><a href="pages/blog.html">Blog</a></button>
 
             </div>
