--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,13 +40,25 @@
               </nav>
               <div class="container1">
                  <div class="content">
-                <h1>CONTACT</h1>
-                <h3>Want to know more about me? lets get connected through social media!!</h3>
+                <h1>CONTACT ME</h1>
                </div>
-               <div class="social1"><section class="socialmedia"><h2>Email Me</h2>
-                   
-               </section></div>
-                
+               <div class="social1"><section class="socialmedia"><h2>Want to know more about me? let's get connected through social media!!</h2>
+                </section>
+            </div>
+            <div class="social2">
+                <div class="column1" >
+                  <h2>My social media links</h2>
+                  <p>Some text..</p>
+                </div>
+                <div class="column2" >
+                  <h2>reach me through email</h2>
+                  <p>Some text..</p>
+                </div>
+              </div>
+
+
+
+
     </div>
     <footer class="footernavbar">
             <div class="logo2">
