--- a/pages/blog.html
+++ b/pages/blog.html
@@ -38,7 +38,31 @@
                     
                 </ul>
               </nav>
-        <div class="container1">
+        <div class="contents">
+            <div class="content3">
+                <div class="column3" ">
+                  <h2>Column 1</h2>
+                  <p>Some text..</p>
+                </div>
+                <div class="column3">
+                  <h2>Column 2</h2>
+                  <p>Some text..</p>
+                </div>
+                <div class="column3">
+                    <h2>Column 2</h2>
+                    <p>Some text..</p>
+                  </div>
+              </div>
+              <div class="content4">
+                <div class="column3">
+                    <h2>Column 2</h2>
+                    <p>Some text..</p>
+                  </div>
+              </div>
+
+
+
+
             
     </div>
     <footer class="footernavbar">
