--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
             <div class="links"> 
                     <a href="pages/contact.html"><button>Contact</button></a>
-                    <a href="pages/portfolio.html"><button>Portfolio</a></button>
-                    <a href="pages/sitereport.html"><button>Site Report</a></button>
-                    <button><a href="pages/blog.html">Blog</a></button>
+                    <a href="pages/portfolio.html"><button>Portfolio</button></a>
+                    <a href="pages/sitereport.html"><button>Site Report</button></a>
+                    <a href="pages/blog.html"><button>Blog</button></a>
 
             </div>
         
