--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,11 +48,17 @@
             <div class="social2">
                 <div class="column1" >
                   <h2>My social media links</h2>
-                  <p>Some text..</p>
+                  <div class="media">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="../image/fb.png" alt="fb"></a>>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="../image/insta.png" alt="instagram"></a>>
+                    <a href="https://twitter.com/" target="_blank"><img src="../image/tweeter.png" alt="tweeter"></a>>
+                </div><br>
                 </div>
                 <div class="column2" >
-                  <h2>reach me through email</h2>
-                  <p>Some text..</p>
+                  <h2>Reach me through email</h2>
+                  <div class="media">
+                    <a href="mailto:riteshjungshah6533@gmail.com" target="_blank"><img src="../image/email.png" alt="email"></a>>
+                </div><br>
                 </div>
               </div>
 
