--- a/pages/blog.html
+++ b/pages/blog.html
@@ -39,7 +39,7 @@
                 </ul>
               </nav>
               <div class=" container1">
-             <div class="content"> <h1>My Blog</h1></div>
+             <div class="content"> <h1>MY BLOG</h1></div>
         <div class="contents">
                 
             <div class="content3">
