mobile css blog page debug

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,7 +15,7 @@
             <ul class="topmenu">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="portfolio.html">Portrfolio</a></li>
-                <li><a class="active"href="blog.html">Blog</a></li>
+                <li><a class="active" href="blog.html">Blog</a></li>
                 <li><a href="sitereport.html">Site Report</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
                 
@@ -24,13 +24,14 @@
             <nav class="dropdown">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle"> 
-                <section class="burger">
+                <div class="burger">
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
-                </section></label>
+                </div>
+            </label>
                 <ul class="menu">   
-                    <li><a  href="../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="portfolio.html">Portrfolio</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="sitereport.html">Site Report</a></li>
@@ -47,33 +48,36 @@
                   <h2>Learning how to make a website</h2>
                   <h3>April 13 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0"></a>>
+                  <img src="../image/logobk.png" alt="log0">
                   <p>hello there, it's been amazing working on this website project. I had little knowledge about html css before studying this course. I used to make website with the help of WordPress and other third party tools. While working on the core part of the website I started to grasp the understanding of fundamental layout and how each and every part of the website are organized together to make an awesome website. </p>
                 </div>
                 <div class="column3">
                   <h2>From flat webpage to a dynamic attractive website</h2>
                   <h3>April 16 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0"></a>>
+                  <img src="../image/logobk.png" alt="log0">
                   <p>it is ironic how a curve on the box can give the edge on its look and how it can make a difference from looking bulge to attractive design. I have worked with WordPress and it was easy to choose a round box instead of a flat one with the help of different them builder however after learning core part of the web development I get to know how every pixel every part of the website every measurements works and make a difference in displaying the output to make an amazing website.</p>
                 </div>
                 <div class="column3">
                     <h2>Responsive Website</h2>
                     <h3>April 1 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0"></a>>
+                  <img src="../image/logobk.png" alt="log0">
                     <p>I always had one question on my mind about the responsiveness of a website. I have learned and tried webpage and content through website developing platform but i never thought that every website can have an independent styles and display according to the user device. As much amazing it was for me, I found it the most difficult part while making this website. I had to make a different version of a website for less resolution device and while working with the same contex of the page. There were a lot of try and errors while making my website work and look better.</p>
                   </div>
               </div>
               <div class="content4">
                 <div class="column5">
                     <h1>Recent Blogs</h1>
-					<li><a href="blog.html"><h2>Learning how to make a website</h2></a></li>
-                    <li><a href="blog.html"><h2>From flat webpage to a dynamic attractive website</h2></a></li>
-                    <li><a href="blog.html"><h2>Responsive Website</h2></a></li>
+					<ul>
+                        <li><a href="blog.html"><h2>Learning how to make a website</h2></a></li>
+                        <li><a href="blog.html"><h2>From flat webpage to a dynamic attractive website</h2></a></li>
+                        <li><a href="blog.html"><h2>Responsive Website</h2></a></li>
+                    </ul>
                   </div>
               </div>
 
+    </div>
     </div>
     <footer class="footernavbar">
             <div class="logo2">
