--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,11 +24,11 @@
             <nav class="dropdown">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle"> 
-                <section class="burger">
+                <div class="burger">
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
                   <div class="burgerelem"></div>
-                </section></label>
+                </div></label>
                 <ul class="menu">   
                     <li><a  href="../index.html">Home</a></li>
                     <li><a href="portfolio.html">Portrfolio</a></li>
@@ -52,6 +52,7 @@
                     <a href="https://www.facebook.com/" target="_blank"><img src="../image/fb.png" alt="fb"></a>>
                     <a href="https://www.instagram.com/" target="_blank"><img src="../image/insta.png" alt="instagram"></a>>
                     <a href="https://twitter.com/" target="_blank"><img src="../image/tweeter.png" alt="tweeter"></a>>
+
                 </div><br>
                 </div>
                 <div class="column2" >
