--- a/pages/blog.html
+++ b/pages/blog.html
@@ -48,21 +48,21 @@
                   <h2>Learning how to make a website</h2>
                   <h3>April 13 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0">
+                  <img src="../image/frontpage.png" alt="fpage">
                   <p>hello there, it's been amazing working on this website project. I had little knowledge about html css before studying this course. I used to make website with the help of WordPress and other third party tools. While working on the core part of the website I started to grasp the understanding of fundamental layout and how each and every part of the website are organized together to make an awesome website. </p>
                 </div>
                 <div class="column3">
                   <h2>From flat webpage to a dynamic attractive website</h2>
                   <h3>April 16 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0">
+                  <img src="../image/frontpage.png" alt="fpage">
                   <p>it is ironic how a curve on the box can give the edge on its look and how it can make a difference from looking bulge to attractive design. I have worked with WordPress and it was easy to choose a round box instead of a flat one with the help of different them builder however after learning core part of the web development I get to know how every pixel every part of the website every measurements works and make a difference in displaying the output to make an amazing website.</p>
                 </div>
                 <div class="column3">
                     <h2>Responsive Website</h2>
                     <h3>April 1 2022</h3>
                   <h4>admin</h4>
-                  <img src="../image/logobk.png" alt="log0">
+                  <img src="../image/responsive.png" alt="fpage">
                     <p>I always had one question on my mind about the responsiveness of a website. I have learned and tried webpage and content through website developing platform but i never thought that every website can have an independent styles and display according to the user device. As much amazing it was for me, I found it the most difficult part while making this website. I had to make a different version of a website for less resolution device and while working with the same contex of the page. There were a lot of try and errors while making my website work and look better.</p>
                   </div>
               </div>
