--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </div>
             </div>
             <div class="links"> 
-                    <a href="pages/contact.html"><button>Contact</button></a>
-                    <a href="pages/portfolio.html"><button>Portfolio</button></a>
-                    <a href="pages/sitereport.html"><button>Site Report</button></a>
-                    <a href="pages/blog.html"><button>Blog</button></a>
+                    <a href="pages/contact.html" class="button">Contact</a>
+                    <a href="pages/portfolio.html" class="button">Portfolio</a>
+                    <a href="pages/sitereport.html" class="button">Site Report</a>
+                    <a href="pages/blog.html" class="button">Blog</a>
 
             </div>
         
