--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -64,25 +64,25 @@
                 <div class="part2a">
                     <div class="part2ab">
                   <h2>JAVA</h2>
-                  <img src="../image/face.png" alt="FACE">
+                  <img src="../image/java.png" alt="java">
                   <h4>Intermediate</h4>
                 </div></div>
                 <div class="part2a">
                     <div class="part2ab">
-                  <h2>Graphics Designing</h2>
-                  <img src="../image/face.png" alt="FACE">
+                  <h2>Graphics Design</h2>
+                  <img src="../image/ai.png" alt="ai">
                   <h4>Intermediate</h4>
                 </div></div>
                 <div class="part2a">
                     <div class="part2ab">
                     <h2>HTML and CSS</h2>
-                    <img src="../image/face.png" alt="FACE">
+                    <img src="../image/html.png" alt="htmlcss">
                     <h4>Intermediate</h4>
                   </div></div>
                   <div class="part2a">
                     <div class="part2ab">
                     <h2>Photography</h2>
-                    <img src="../image/face.png" alt="FACE">
+                    <img src="../image/photo.png" alt="cam">
                     <h4>Intermediate</h4>
                   </div></div>
               </div>
