--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>MY Blog</title>
+        <title>Contact Me</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/mobile.css" media="screen and (max-width: 801px)" />
         <link rel="stylesheet" href="../css/main.css" media="screen and (min-width: 801px)" />
